--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Hangi nota olduğunu bulun ve antrenman yapın!">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="baglama">
+  <meta name="apple-mobile-web-app-title" content="Hangi Nota?">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>baglama</title>
+  <title>Hangi Nota?</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -36,7 +36,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=2262685474');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3271303492');
       });
     }
   </script>
